[package]
name = "ascii_art_converter"
version = "0.1.0"
edition = "2021"
authors = ["Charlie Crosley charlie1crosley@gmail.com"]
license = "MIT"
description = "A tool to convert images to ascii art"
readme = "README.md"
homepage = "https://github.com/you/grrs"
repository = "https://github.com/you/grrs"
keywords = ["cli", "converter", "image"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
image = "0.24.7"